[gd_scene load_steps=2 format=3 uid="uid://b8om3mtsoylfl"]

[ext_resource type="Script" path="res://scenes/game objects/weapon/weapon.gd" id="1_8ptsp"]

[node name="Weapon" type="Node2D"]
script = ExtResource("1_8ptsp")
can_use_attack = true

[node name="RateTimer" type="Timer" parent="."]
autostart = true

[node name="SwitchTimer" type="Timer" parent="."]
wait_time = 3.14
autostart = true

[connection signal="timeout" from="RateTimer" to="." method="_on_rate_timer_timeout"]
[connection signal="timeout" from="SwitchTimer" to="." method="_on_switch_timer_timeout"]
